<resources>
    <string name="app_name">websocket-client</string>
    <string name="status_default">status: disconnected</string>
    <string name="button_connect">Connect</string>
    <string name="button_send">Send</string>
    <string name="field_address">Address</string>
    <string name="field_message">Enter a message</string>
    <string name="log_tag">WS-AndroidClient</string>
</resources>